<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WhatS</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="WTM">WTM - WHAT THE MESSAGE</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="login">login</string>
    <string name="cancel">cancel</string>
    <string name="register">register</string>
    <string name="title_activity_guestbook">GuestbookActivity</string>
    <string name="title_activity_guestbook_read">GuestbookReadActivity</string>
    <string name="title_activity_guestbook_write">GuestbookWriteActivity</string>
    <string name="send">Send</string>
    <string name="title_activity_message">MessageActivity</string>

</resources>
